# HowDoDiseasesWork

./: .gitignore  AC.md  README.md  analyze_gene_vs_term_counts.py  analyze_information_content_vs_ranking.py  compare_enrichment_vs_robokop.py  compare_subclass_results.py  create_enrichment_ranking_analysis.py  create_gene_count_histogram.py  create_precision_recall_plots.py  disease_enrichment_analysis.py  diseases_zero_genes_with_terms.py  extract_go_hierarchy.py  extract_robokop_disease_term_edges.py  extract_term_hierarchy.py  fast_disease_enrichment_analysis.py  ingest_robokop_data.py  parse_results_to_tsv.py  plot_enrichment_gene_vs_term_counts.py  precision_recall_at_k_analysis.py  pyproject.toml  run_pipeline.py  stratified_precision_recall_analysis.py
configs/: robokop_local.example.toml  translator_ci_latest.toml
disease-enrichment-viz/: README.md  environment.yml  test_webapp.html
disease-enrichment-viz/backend/: app.py
disease-enrichment-viz/backend/data_prep/: prepare_enrichment_database.py
disease-enrichment-viz/frontend/: index.html
disease-enrichment-viz/frontend/src/: app.js
docs/: translator-ci-rerun.md
scripts/: download_translator_kgx.py  filter_clean_enrichment_results.py
