[project]
name = "how-do-diseases-work"
version = "0.1.0"
description = "Disease gene-set enrichment analysis against Translator KGX and AnswerCoalesce."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.3",
    "flask-cors>=4.0.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0.3",
    "requests>=2.31",
    "zstandard>=0.22",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
